# foreachline

./: README.md  pyproject.toml
foreachline/: __init__.py
